--- a/index.html
+++ b/index.html
@@ -106,11 +106,11 @@
         <div class="col-md-6 col-lg-6 col-sm-12">
           <h1>QUALITY WORK & COMPETIVE PRICE</h1>
           <div class="play-video">
-            <i class="fas fa-play-circle"></i>
+            
             <a
               target="blank"
               href="https://www.youtube.com/watch?v=6YS2L-_PKmk&t=838s"
-              >OUR VIDEO</a
+              ><i class="fas fa-play-circle"></i> OUR VIDEO</a
             >
           </div>
         </div>
