--- a/index.html
+++ b/index.html
@@ -171,22 +171,70 @@
     <div class="container">
       <div class="row grid">
         <div class="grid-item col-md-4 col-sm-6 col-xs-12">
-          <img src="assets/images/1.png" class="img-fluid" alt="img04" />
+          <figure data-bs-toggle="modal" data-bs-target="#exampleModal">
+            <img src="assets/images/1.png" class="img-fluid" alt="img04" />
+            <figcaption class="fig-caption text-center">
+                  <i class="fas fa-search"></i>
+                  <h5 class="title">Cupboard</h5>
+                  <span class="sub-title">Craftsman</span>
+                  <a data-fancybox data-src="#ns"></a>
+                </figcaption>
+          </figure>
         </div>
         <div class="white more gray grid-item col-md-4 col-sm-6 col-xs-12">
-          <img src="assets/images/2.png" class="img-fluid" alt="img04" />
+          <figure data-bs-toggle="modal" data-bs-target="#exampleModal">
+            <img src="assets/images/2.png" class="img-fluid" alt="img04" />
+            <figcaption class="fig-caption text-center">
+                  <i class="fas fa-search"></i>
+                  <h5 class="title">Cupboard</h5>
+                  <span class="sub-title">Craftsman</span>
+                  <a data-fancybox data-src="#ns"></a>
+                </figcaption>
+          </figure>
         </div>
         <div class="light grid-item col-md-4 col-sm-6 col-xs-12">
-          <img src="assets/images/3.png" class="img-fluid" alt="img04" />
+          <figure data-bs-toggle="modal" data-bs-target="#exampleModal">
+            <img src="assets/images/3.png" class="img-fluid" alt="img04" />
+            <figcaption class="fig-caption text-center">
+                  <i class="fas fa-search"></i>
+                  <h5 class="title">Cupboard</h5>
+                  <span class="sub-title">Craftsman</span>
+                  <a data-fancybox data-src="#ns"></a>
+                </figcaption>
+          </figure>
         </div>
         <div class="light grid-item col-md-4 col-sm-6 col-xs-12">
-          <img src="assets/images/4.png" class="img-fluid" alt="img04" />
+          <figure data-bs-toggle="modal" data-bs-target="#exampleModal">
+            <img src="assets/images/4.png" class="img-fluid" alt="img04" />
+            <figcaption class="fig-caption text-center">
+                  <i class="fas fa-search"></i>
+                  <h5 class="title">Cupboard</h5>
+                  <span class="sub-title">Craftsman</span>
+                  <a data-fancybox data-src="#ns"></a>
+                </figcaption>
+          </figure>
         </div>
         <div class="white grid-item col-md-4 col-sm-6 col-xs-12">
-          <img src="assets/images/5.png" class="img-fluid" alt="img04" />
+          <figure data-bs-toggle="modal" data-bs-target="#exampleModal">
+            <img src="assets/images/5.png" class="img-fluid" alt="img04" />
+            <figcaption class="fig-caption text-center">
+                  <i class="fas fa-search"></i>
+                  <h5 class="title">Cupboard</h5>
+                  <span class="sub-title">Craftsman</span>
+                  <a data-fancybox data-src="#ns"></a>
+                </figcaption>
+          </figure>
         </div>
         <div class="white grid-item col-md-4 col-sm-6 col-xs-12">
-          <img src="assets/images/6.png" class="img-fluid" alt="img04" />
+          <figure data-bs-toggle="modal" data-bs-target="#exampleModal">
+            <img src="assets/images/6.png" class="img-fluid" alt="img04" />
+            <figcaption class="fig-caption text-center">
+                  <i class="fas fa-search"></i>
+                  <h5 class="title">Cupboard</h5>
+                  <span class="sub-title">Craftsman</span>
+                  <a data-fancybox data-src="#ns"></a>
+                </figcaption>
+          </figure>
         </div>
       </div>
     </div>
@@ -202,6 +250,24 @@
        </div>
      </div>
    </div>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel"> title</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
    <!-- client area -->
    <!----------
   Start clients section
