--- a/index.html
+++ b/index.html
@@ -253,14 +253,33 @@
 
 <!-- Modal -->
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
+  <div class="modal-dialog modal-lg">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel"> title</h5>
+        <h5 class="modal-title" id="exampleModalLabel"> Build A Cupboard</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        ...
+       <div class="row">
+         <div class="col-md-6 col-lg-6 col-sm-12">
+         <img src="assets/images/1.png" class="img-fluid" alt="img04" />
+       </div>
+       <div class="col-md-6 col-lg-6 col-sm-12">
+         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita, hic sunt non, autem ipsam voluptatum quod explicabo quidem iusto suscipit ipsa. Quam, vitae ipsum? Harum alias numquam nesciunt voluptate eum.</p>
+         <div class="button pb-5">
+         <a href="tel:+0123-456-789">Call Us</a>
+       </div>
+       </div>
+         <div class="col-md-6 col-lg-6 col-sm-12">
+         <img src="assets/images/3.png" class="img-fluid" alt="img04" />
+       </div>
+       <div class="col-md-6 col-lg-6 col-sm-12">
+         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita, hic sunt non, autem ipsam voluptatum quod explicabo quidem iusto suscipit ipsa. Quam, vitae ipsum? Harum alias numquam nesciunt voluptate eum.</p>
+         <div class="button pb-5">
+         <a href="tel:+0123-456-789">Call Us</a>
+       </div>
+       </div>
+       </div>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
