--- a/index.html
+++ b/index.html
@@ -171,12 +171,12 @@
     <div class="container">
       <div class="row grid">
         <div class="grid-item col-md-4 col-sm-6 col-xs-12">
-          <figure data-bs-toggle="modal" data-bs-target="#exampleModal">
+          <figure class="dj" data-bs-toggle="modal" data-bs-target="#exampleModal">
             <img src="assets/images/1.png" class="img-fluid" alt="img04" />
             <figcaption class="fig-caption text-center">
                   <i class="fas fa-search"></i>
                   <h5 class="title">Cupboard</h5>
-                  <span class="sub-title">Craftsman</span>
+                  <span class="sub-title">Fixxi blitz</span>
                   <a data-fancybox data-src="#ns"></a>
                 </figcaption>
           </figure>
@@ -187,7 +187,7 @@
             <figcaption class="fig-caption text-center">
                   <i class="fas fa-search"></i>
                   <h5 class="title">Cupboard</h5>
-                  <span class="sub-title">Craftsman</span>
+                  <span class="sub-title">Fixxi blitz</span>
                   <a data-fancybox data-src="#ns"></a>
                 </figcaption>
           </figure>
@@ -198,7 +198,7 @@
             <figcaption class="fig-caption text-center">
                   <i class="fas fa-search"></i>
                   <h5 class="title">Cupboard</h5>
-                  <span class="sub-title">Craftsman</span>
+                  <span class="sub-title">Fixxi blitz</span>
                   <a data-fancybox data-src="#ns"></a>
                 </figcaption>
           </figure>
@@ -209,7 +209,7 @@
             <figcaption class="fig-caption text-center">
                   <i class="fas fa-search"></i>
                   <h5 class="title">Cupboard</h5>
-                  <span class="sub-title">Craftsman</span>
+                  <span class="sub-title">Fixxi blitz</span>
                   <a data-fancybox data-src="#ns"></a>
                 </figcaption>
           </figure>
@@ -220,7 +220,7 @@
             <figcaption class="fig-caption text-center">
                   <i class="fas fa-search"></i>
                   <h5 class="title">Cupboard</h5>
-                  <span class="sub-title">Craftsman</span>
+                  <span class="sub-title">Fixxi blitz</span>
                   <a data-fancybox data-src="#ns"></a>
                 </figcaption>
           </figure>
@@ -231,7 +231,7 @@
             <figcaption class="fig-caption text-center">
                   <i class="fas fa-search"></i>
                   <h5 class="title">Cupboard</h5>
-                  <span class="sub-title">Craftsman</span>
+                  <span class="sub-title">Fixxi blitz</span>
                   <a data-fancybox data-src="#ns"></a>
                 </figcaption>
           </figure>
