--- a/index.html
+++ b/index.html
@@ -105,14 +105,8 @@
       <div class="container">
         <div class="col-md-6 col-lg-6 col-sm-12">
           <h1>QUALITY WORK & COMPETIVE PRICE</h1>
-          <div class="play-video">
-            
-            <a
-              target="blank"
-              href="https://www.youtube.com/watch?v=6YS2L-_PKmk&t=838s"
-              ><i class="fas fa-play-circle"></i> OUR VIDEO</a
-            >
-          </div>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis possimus sed ipsam cupiditate corporis distinctio vel amet explicabo voluptatibus delectus. amet consectetur adipisicing elit</p>
+          <a href="#contact" class="button">Contact</a>
         </div>
       </div>
     </div>
@@ -174,7 +168,7 @@
           <figure class="dj" data-bs-toggle="modal" data-bs-target="#exampleModal">
             <img src="assets/images/1.png" class="img-fluid" alt="img04" />
             <figcaption class="fig-caption text-center">
-                  <i class="fas fa-search"></i>
+                  <i class="fas fa-eye"></i>
                   <h5 class="title">Cupboard</h5>
                   <span class="sub-title">Fixxi blitz</span>
                   <a data-fancybox data-src="#ns"></a>
@@ -185,7 +179,7 @@
           <figure data-bs-toggle="modal" data-bs-target="#exampleModal">
             <img src="assets/images/2.png" class="img-fluid" alt="img04" />
             <figcaption class="fig-caption text-center">
-                  <i class="fas fa-search"></i>
+                  <i class="fas fa-eye"></i>
                   <h5 class="title">Cupboard</h5>
                   <span class="sub-title">Fixxi blitz</span>
                   <a data-fancybox data-src="#ns"></a>
@@ -196,7 +190,7 @@
           <figure data-bs-toggle="modal" data-bs-target="#exampleModal">
             <img src="assets/images/3.png" class="img-fluid" alt="img04" />
             <figcaption class="fig-caption text-center">
-                  <i class="fas fa-search"></i>
+                  <i class="fas fa-eye"></i>
                   <h5 class="title">Cupboard</h5>
                   <span class="sub-title">Fixxi blitz</span>
                   <a data-fancybox data-src="#ns"></a>
@@ -207,7 +201,7 @@
           <figure data-bs-toggle="modal" data-bs-target="#exampleModal">
             <img src="assets/images/4.png" class="img-fluid" alt="img04" />
             <figcaption class="fig-caption text-center">
-                  <i class="fas fa-search"></i>
+                  <i class="fas fa-eye"></i>
                   <h5 class="title">Cupboard</h5>
                   <span class="sub-title">Fixxi blitz</span>
                   <a data-fancybox data-src="#ns"></a>
@@ -218,7 +212,7 @@
           <figure data-bs-toggle="modal" data-bs-target="#exampleModal">
             <img src="assets/images/5.png" class="img-fluid" alt="img04" />
             <figcaption class="fig-caption text-center">
-                  <i class="fas fa-search"></i>
+                  <i class="fas fa-eye"></i>
                   <h5 class="title">Cupboard</h5>
                   <span class="sub-title">Fixxi blitz</span>
                   <a data-fancybox data-src="#ns"></a>
@@ -229,7 +223,7 @@
           <figure data-bs-toggle="modal" data-bs-target="#exampleModal">
             <img src="assets/images/6.png" class="img-fluid" alt="img04" />
             <figcaption class="fig-caption text-center">
-                  <i class="fas fa-search"></i>
+                  <i class="fas fa-eye"></i>
                   <h5 class="title">Cupboard</h5>
                   <span class="sub-title">Fixxi blitz</span>
                   <a data-fancybox data-src="#ns"></a>
